<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.neslab.intentsender.IntentSender">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        <Button android:id="@+id/intent_impl_internal"
            android:text="@string/intent_impl_internal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button android:id="@+id/intent_expl_internal"
            android:text="@string/intent_expl_internal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button android:id="@+id/function_call"
            android:text="@string/function_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button android:id="@+id/intent_impl_external"
            android:text="@string/intent_impl_external"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button android:id="@+id/intent_expl_external"
            android:text="@string/intent_expl_external"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button android:id="@+id/intent_service_internal"
            android:text="@string/intent_service_internal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button android:id="@+id/intent_service_external"
            android:text="@string/intent_service_external"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView android:id="@+id/intents_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_result" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
